# PredictPy

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.sandbox.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/agent-memory/ui-ux-designer/: MEMORY.md
.claude/agents/: data-scientist-analyst.md  ui-ux-designer.md
.claude/rules/: backend.md  frontend.md
backend/: .dockerignore  .env.example  Dockerfile  analyzer.py  auth.py  feature_selector.py  gen_patch.py  main.py  model_trainer.py  preprocessing.py  pyproject.toml  requirements.txt
docs/plans/: 2026-02-19-advanced-visualizations-design.md  2026-02-19-advanced-visualizations.md  2026-02-19-histogram-design.md  2026-02-19-histogram.md  2026-02-19-lasso-regression-design.md  2026-02-19-remove-auth.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  prettier.config.mjs
frontend/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/contact/: page.tsx
frontend/components/: AuthGate.tsx  CorrelationHeatmap.tsx  DatasetPreview.tsx  DimensionReduction.tsx  FeatureRanking.tsx  FileUpload.tsx  Histogram.tsx  LearningCurve.tsx  ModelEvaluation.tsx  ModelResults.tsx  ModelTrainer.tsx  PartialDependence.tsx  Predict.tsx  PredictpyLogo.tsx  ScatterChart.tsx  ScatterGrid.tsx  ShapPlot.tsx  StepIndicator.tsx  TargetSelector.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/public/: robots.txt
frontend/store/: useStore.ts
nginx/: default.conf
(+5 files in other folders)
