[project]
name = "predictpy-backend"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",  # line too long — handled by formatter
  "B008",  # do not perform function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["auth", "analyzer", "feature_selector", "model_trainer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
